# Test_Exam

./: .gitignore  01_神经网络基础_线性回归与DNN.md  02_CNN_卷积神经网络_上.md  03_CNN_卷积神经网络_下.md  04_RNN_LSTM_循环神经网络.md  05_多模态情感识别_Transformer.md  06_文献理论与综合概念.md  07_综合模拟考试卷.md  08_深度学习核心基础_原理公式代码.md  09_代码片段分析题库.md  10_Transformer完全指南_自回归多头注意力.md  11_深度学习高频考点_通用问答.md  12_深度学习知识体系总纲.md  AGENTS.md  MyFirstQt.py  MyRdkX5.md  README.md  build_exe.bat  build_linux.sh  exam_bank.py  exam_logic.js  md_practice.py  mkdocs.yml  pyproject.toml  question_bank.js  机器学习测验答题记录.md  模板_题库格式示例.md  深度学习综合考试试卷.html  深度学习综合考试试卷_可考试版.html  深度学习随机考试.html
docs/: 01_神经网络基础_线性回归与DNN.md  02_CNN_卷积神经网络_上.md  05_多模态情感识别_Transformer.md  07_综合模拟考试卷.md  10_Transformer完全指南_自回归多头注意力.md  12_深度学习知识体系总纲.md  13_计算专题.md  14_代码分析.md  15_选择填空.md  16_代码编写.md  ChatGPT_Test.html  Google_Test.html  HTML展示提示词.md  index.md  功能说明.md  更新日志.md  深度学习知识全景.md  目录.md
scripts/: main.js
site/: 404.html  index.html  sitemap.xml
site/01_神经网络基础_线性回归与DNN/: index.html
site/02_CNN_卷积神经网络_上/: index.html
site/03_CNN_卷积神经网络_下/: index.html
site/04_RNN_LSTM_循环神经网络/: index.html
site/05_多模态情感识别_Transformer/: index.html
site/06_文献理论与综合概念/: index.html
site/07_综合模拟考试卷/: index.html
site/08_深度学习核心基础_原理公式代码/: index.html
site/09_代码片段分析题库/: index.html
site/10_Transformer完全指南_自回归多头注意力/: index.html
site/11_深度学习高频考点_通用问答/: index.html
site/12_深度学习知识体系总纲/: index.html
site/13_计算专题/: index.html
site/14_代码分析/: index.html
site/15_选择填空/: index.html
site/16_代码编写/: index.html
site/HTML展示提示词/: index.html
site/MyRdkX5/: index.html
(+8 files in other folders)
